更新薪资的部分功能